fixed the GA for finnished orders and added some MVP indicators of succesful/failed purchases

--- a/ksf-campaign-pages.html
+++ b/ksf-campaign-pages.html
@@ -131,7 +131,7 @@
                           id="3304">Välj paket</button>
                       </div>
                       <input type="hidden" value="4047" id="3304-campaignNo">
-                      <input type="hidden" value="  " id="3304-packageId">
+                      <input type="hidden" value="HBL WEBB" id="3304-packageId">
                     </div>
                   </div>
                 </div>
@@ -425,6 +425,11 @@
           <div id="payment-successfull" style="display:none;">
             <div class="successful-payment">
               <h1>Betalning lyckades.</h1>
+            </div>
+          </div>
+          <div id="payment-unsuccessfull" style="display:none;">
+            <div class="error_text">
+              <h1>Betalning misslyckades. Var god uppdatera sidan och försök igen.</h1>
             </div>
           </div>
         </div>
