changes to error handling and some design changes aswell as accurate campaign data in

--- a/ksf-campaign-pages.html
+++ b/ksf-campaign-pages.html
@@ -50,28 +50,46 @@
       <div class="row_column">
         <div class="column" id="grid-1">
           <!--CAMPAIGN ITEM-->
-          <div class="cards_item">
+          <div class="cards_item" id="3305-campaign_info_container">
             <div class="card">
               <div class="img-container">
                 <img id="3305-picture" src="https://picsum.photos/300/200/?image=10" style="width:100%;">
-                <div class="bottom-right-campaign-image">fre-sön</div>
+                <div class="bottom-right-campaign-image">mån-sön</div>
               </div>
               <div class="card_content">
-                <h2 class="card_title" id="3305-text">HBL+Presentkort till stockman</h2>
-                <p class="card_text">HBL 7 dagar + 500 € presentkort till Stockholm</p>
+                <h2 class="card_title" id="3305-text">HBL Total</h2>
+                <p class="card_text">HBL 7 dagar – Ett hemburet bildningspaket</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                   <div class="text-center" id="more-3305-drop">
                     <div class="text-center">
-                      <p class="price-cross">norm. 299.95 €</p>
-                      <p class="price-actual" id="3305-price">99,95 €</p>
-                      <p class="per_month">/ månad *</p>
-                      <p class="campaign_info">Feb 10, 2021 00:00:00</p>
+                      <p class="price-cross">norm. 39.90 € /mån.</p>
+                      <p class="price-actual" id="3305-price">19,95 €</p>
+                      <p class="per_month">/ första månadaden</p>
+                      <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
+                      <p class="campaign_info" id="3305-campaign_info">March 31, 2021 00:00:00</p>
                     </div>
                     <div id="more-3305-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
                       <div class="offering_items">
                         <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
-                        <p class="offer_sub">Tryckta tidningen HBL fredag-söndag</p>
+                        <p class="offer_sub">Tryckta tidningen HBL måndag-söndag</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningar
+                        <p class="offer_sub">HBL, Västra Nyland, Östnyland och digitala korsord på datorn</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningsappen HBL 365
+                        <p class="offer_sub">E-tidningarna HBL, Västra Nyland, Östnyland och digitala korsord på mobilen
+                          eller surfplattan</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar
+                        <p class="offer_sub">Nyheter på mobilen och surfplattan, pushnotiser med HBL nyheter, VN nyheter
+                          och ÖN nyheter</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Premium
+                        <p class="offer_sub">Alla artiklar på hbl.fi, vastranyland.fi och ostnyland.fi</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_sub">Nyheter & förmåner</p>
                         </p>
                       </div>
                     </div>
@@ -84,8 +102,8 @@
                         <button class="btn select-button rounded-pill btn-dark" onClick="selectCampaign(this.id)"
                           id="3305">Välj paket</button>
                       </div>
-                      <input type="hidden" value="4046" id="3305-campaignNo">
-                      <input type="hidden" value="HBL WEBB" id="3305-packageId">
+                      <input type="hidden" value="4116" id="3305-campaignNo">
+                      <input type="hidden" value="HBL HUFVUDSTADSBLADET" id="3305-packageId">
                     </div>
                   </div>
                 </div>
@@ -96,28 +114,46 @@
         </div>
         <div class="column" id="grid-2">
           <!--CAMPAIGN ITEM-->
-          <div class="cards_item">
+          <div class="cards_item" id="3304-campaign_info_container">
             <div class="card">
               <div class="img-container">
                 <img id="3304-picture" src="https://picsum.photos/300/?image=14" style="width:100%;">
-                <div class="bottom-right-campaign-image ">fre-Sön</div>
+                <div class="bottom-right-campaign-image ">fre-sön</div>
               </div>
               <div class="card_content">
-                <h2 class="card_title" id="3304-text">HBL+Presentkort till stockman</h2>
-                <p class="card_text">HBL 7 dagar + 500 € presentkort till Stockholm</p>
+                <h2 class="card_title" id="3304-text">HBL Helg</h2>
+                <p class="card_text">HBL fredag till söndag garanterar dig ett rikare liv</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                   <div class="text-center" id="more-3304-drop">
                     <div class="text-center">
-                      <p class="price-cross">norm. 299.95 €</p>
-                      <p class="price-actual" id="3304-price">99,95 €</p>
-                      <p class="per_month">/ månad *</p>
-                      <p class="campaign_info">Feb 28, 2021 00:00:00</p>
+                      <p class="price-cross">norm. 29.90 € /mån.</p>
+                      <p class="price-actual" id="3304-price">14,95 €</p>
+                      <p class="per_month">/första månaden</p>
+                      <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
+                      <p class="campaign_info" id="3304-campaign_info">March 31, 2021 00:00:00</p>
                     </div>
                     <div id="more-3304-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
                       <div class="offering_items">
                         <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
                         <p class="offer_sub">Tryckta tidningen HBL fredag-söndag</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningar
+                        <p class="offer_sub">HBL, Västra Nyland, Östnyland och digitala korsord på datorn</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningsappen HBL 365
+                        <p class="offer_sub">E-tidningarna HBL, Västra Nyland, Östnyland och digitala korsord på mobilen
+                          eller surfplattan</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar
+                        <p class="offer_sub">Nyheter på mobilen och surfplattan, pushnotiser med HBL nyheter, VN nyheter
+                          och ÖN nyheter</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Premium
+                        <p class="offer_sub">Alla artiklar på hbl.fi, vastranyland.fi och ostnyland.fi</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_sub">Nyheter & förmåner</p>
                         </p>
                       </div>
                     </div>
@@ -130,8 +166,8 @@
                         <button class="btn select-button rounded-pill btn-dark" onClick="selectCampaign(this.id)"
                           id="3304">Välj paket</button>
                       </div>
-                      <input type="hidden" value="4047" id="3304-campaignNo">
-                      <input type="hidden" value="HBL WEBB" id="3304-packageId">
+                      <input type="hidden" value="4117" id="3304-campaignNo">
+                      <input type="hidden" value="HBL WEEKEND FRE-SÖ" id="3304-packageId">
                     </div>
                   </div>
                 </div>
@@ -140,28 +176,42 @@
           </div>
           <!--ENDING OF CAMPAIGN ITEM-->
           <!--CAMPAIGN ITEM-->
-          <div class="cards_item">
+          <div class="cards_item" id="3306-campaign_info_container">
             <div class="card">
               <div class="img-container">
                 <img id="3306-picture" src="https://picsum.photos/300/100/?image=17" style="width:100%;">
-                <div class="bottom-right-campaign-image ">test </div>
+                <!--<div class="bottom-right-campaign-image ">test </div>-->
               </div>
               <div class="card_content">
-                <h2 class="card_title" id="3306-text">HBL+Presentkort till stockman</h2>
-                <p class="card_text">HBL 7 dagar + 500 € presentkort till Stockholm</p>
+                <h2 class="card_title" id="3306-text">HBL 365</h2>
+                <p class="card_text">Kvalitetsjournalistik när, var och hur du vill</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                   <div class="text-center" id="more-3306-drop">
                     <div class="text-center">
-                      <p class="price-cross">norm. 299.95 €</p>
-                      <p class="price-actual" id="3306-price">99,95 €</p>
-                      <p class="per_month">/ månad *</p>
-                      <p class="campaign_info">Mar 29, 2021 00:00:00</p>
+                      <p class="price-cross">norm. 17.90 € /mån.</p>
+                      <p class="price-actual" id="3306-price">49 €</p>
+                      <p class="per_month">/6 månader</p>
+                      <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
+                      <p class="campaign_info" id="3306-campaign_info">Mar 31, 2021 00:00:00</p>
                     </div>
                     <div id="more-3306-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
                       <div class="offering_items">
-                        <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
-                        <p class="offer_sub">Tryckta tidningen HBL fredag-söndag</p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningsappen HBL 365
+                        <p class="offer_sub">E-tidningarna HBL, Västra Nyland, Östnyland och digitala korsord på mobilen
+                          eller surfplattan</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningar på dator
+                        <p class="offer_sub">HBL, Västra Nyland, Östnyland och digitala korsord på datorn</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar
+                        <p class="offer_sub">HBL nyheter, VN nyheter och ÖN nyheter, pushnotiser</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Alla artiklar inkl. Premium
+                        <p class="offer_sub">Alla artiklar på hbl.fi, vastranyland.fi och ostnyland.fi</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_sub">Nyheter & förmåner</p>
                         </p>
                       </div>
                     </div>
@@ -175,7 +225,7 @@
                           id="3306">Välj paket</button>
                       </div>
                     </div>
-                    <input type="hidden" value="4048" id="3306-campaignNo">
+                    <input type="hidden" value="4049" id="3306-campaignNo">
                     <input type="hidden" value="HBL WEBB" id="3306-packageId">
                   </div>
                 </div>
@@ -186,28 +236,48 @@
         </div>
         <div class="column" id="grid-3">
           <!--CAMPAIN ITEM-->
-          <div class="cards_item">
+          <div class="cards_item" id="3307-campaign_info_container">
             <div class="card">
               <div class="img-container">
                 <img id="3307-picture" src="https://picsum.photos/300/220/?image=19" style="width:100%;">
-                <div class="bottom-right-campaign-image ">fre-Sön</div>
+                <div class="bottom-right-campaign-image ">mån-fre</div>
               </div>
               <div class="card_content">
-                <h2 class="card_title" id="3307-text">HBL+Presentkort till stockman</h2>
-                <p class="card_text">HBL 7 dagar + 500 € presentkort till Stockholm</p>
+                <h2 class="card_title" id="3307-text">HBL vardag</h2>
+                <p class="card_text">Nyhet! HBL måndag – fredag där veckoslutstidningen inte når dig!</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-center">
                   <div class="text-center" id="more-3307-drop">
                     <div class="text-center">
-                      <p class="price-cross">norm. 299.95 €</p>
-                      <p class="price-actual" id="3307-price">99,95 €</p>
-                      <p class="per_month">/ månad *</p>
-                      <p class="campaign_info">Jan 25, 2021 00:00:00</p>
+                      <p class="price-cross">norm. 29.90 € /mån.</p>
+                      <p class="price-actual" id="3307-price">14,95 €</p>
+                      <p class="per_month">/första månaden</p>
+                      <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
+                      <p class="campaign_info" id="3307-campaign_info">March 31, 2021 00:00:00</p>
+                      <p class="campaign_info_sub">Observera att tidningen är addresserad<br>och delas ut med
+                        dagsposten.</p>
                     </div>
                     <div id="more-3307-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
                       <div class="offering_items">
                         <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
-                        <p class="offer_sub">Tryckta tidningen HBL fredag-söndag</p>
+                        <p class="offer_sub">Tryckta tidningen HBL måndag-fredag</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningar
+                        <p class="offer_sub">HBL, Västra Nyland, Östnyland och digitala korsord på datorn</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningsappen HBL 365
+                        <p class="offer_sub">E-tidningarna HBL, Västra Nyland, Östnyland och digitala korsord på mobilen
+                          eller surfplattan</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar
+                        <p class="offer_sub">Nyheter på mobilen och surfplattan, pushnotiser med HBL nyheter, VN nyheter
+                          och ÖN nyheter</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Premium
+                        <p class="offer_sub">Alla artiklar på hbl.fi, vastranyland.fi och ostnyland.fi</p>
+                        </p>
+                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_sub">Nyheter & förmåner</p>
                         </p>
                       </div>
                     </div>
@@ -220,8 +290,8 @@
                         <button class="btn select-button rounded-pill btn-dark" onClick="selectCampaign(this.id)"
                           id="3307">Välj paket</button>
                       </div>
-                      <input type="hidden" value="4049" id="3307-campaignNo">
-                      <input type="hidden" value="HBL WEBB" id="3307-packageId">
+                      <input type="hidden" value="4119" id="3307-campaignNo">
+                      <input type="hidden" value="HBL VARDAG" id="3307-packageId">
                     </div>
                   </div>
                 </div>
@@ -366,7 +436,8 @@
                   </div>
               </form>
               <div class="col">
-                <a onclick="forgotPwModal()" class="btn rounded-pill">Glömt lösenord?</a>
+                <a style="display:none;" id="forgot_password_a" onclick="forgotPwModal()" class="btn rounded-pill">Glömt
+                  lösenord?</a>
               </div>
             </div>
           </div>
@@ -390,8 +461,7 @@
               <p class="selected_campaign_text " id="selected_campaign_text"></p>
               <p class="selected_campaign_price" id="selected_campaign_price"></p>
               <div class="campaign-chosen">
-                <p class="btn btn-chosen rounded-pill" id="selected_campaign_indicator" style="display:none;">Paket
-                  valt
+                <p class="btn btn-chosen rounded-pill" id="selected_campaign_indicator" style="display:none;">Paket valt
                 </p>
               </div>
               <p class="selected_campaign_total" id="selected_campaign_total">Totalt</p>
@@ -445,19 +515,31 @@
         </div>
         <div class="modal-body">
           <form id="forgotPasswordInit">
-            <div class="container">
-              <div class="row">
-                <h5>Vi skickar dig en länk som låter dig skapa ett nytt lösenord.</h5>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <label for="email">Epost</label><br>
-                  <input class="form-control" type="text" id="email" name="email" required>
+            <div class="container text-center">
+              <div id="forgot_pw_form">
+                <div class="row">
+                  <h5>Vi skickar dig en länk som låter dig skapa ett nytt lösenord.</h5>
+                </div>
+                <div class="row">
+                  <div class="col" style="padding-left:10%;padding-right:10%">
+                    <label for="email">Epost</label><br>
+                    <input class="form-control" type="text" id="emailReset" name="email" required>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <button style="margin-top:5px;" class="btn btn-chosen rounded-pill"> Skicka</button>
+                  </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col">
-                  <button style="margin-top:5px;" class="btn btn-chosen rounded-pill"> Skicka</button>
+              <div id="pw_form_successfull" style="display:none;">
+                <div class="successful-payment">
+                  <h1>Förfrågan lyckades och vi har nu skickat dig en förfrågan att byta lösenord per e-post.</h1>
+                </div>
+              </div>
+              <div id="pw_form_unsuccessfull" style="display:none;">
+                <div class="error_text">
+                  <h1>Förfrågan misslyckades. Var god uppdatera sidan och försök igen.</h1>
                 </div>
               </div>
             </div>
