changed the forgot password, removed old rest route and added terms of use link

--- a/ksf-campaign-pages.html
+++ b/ksf-campaign-pages.html
@@ -253,8 +253,7 @@
                       <p class="per_month">/första månaden</p>
                       <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
                       <p class="campaign_info" id="3307-campaign_info">March 31, 2021 00:00:00</p>
-                      <p class="campaign_info_sub">Observera att tidningen är addresserad<br>och delas ut med
-                        dagsposten.</p>
+                      <p class="campaign_info_sub">Observera att tidningen är addresserad<br>och delas ut med dagsposten.</p>
                     </div>
                     <div id="more-3307-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
@@ -421,8 +420,7 @@
                   <input type="hidden" name="packageId" value="" id="packageId">
                   <input class="checkbox" type="checkbox" id="terms-accept">
                 </div>
-                <label class="checkbox-text" for="terms-accept"> Jag har läst och godkänner <a
-                    href="">villkoren</a></label>
+                <label class="checkbox-text" for="terms-accept"> Jag har läst och godkänner <a href="https://www.hbl.fi/bruksvillkor/" target="_blank">villkoren</a></label>
                 <br>
                 <div class="row">
                   <div class="col">
@@ -436,8 +434,7 @@
                   </div>
               </form>
               <div class="col">
-                <a style="display:none;" id="forgot_password_a" onclick="forgotPwModal()" class="btn rounded-pill">Glömt
-                  lösenord?</a>
+                <a style="display:none;" id="forgot_password_a" href="https://www.hbl.fi/losenord/" target="_blank" class="btn rounded-pill">Glömt lösenord?</a>
               </div>
             </div>
           </div>
@@ -502,49 +499,6 @@
               <h1>Betalning misslyckades. Var god uppdatera sidan och försök igen.</h1>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPassword" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="forgotPasswordLabel">Har du glömt ditt lösenord?</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form id="forgotPasswordInit">
-            <div class="container text-center">
-              <div id="forgot_pw_form">
-                <div class="row">
-                  <h5>Vi skickar dig en länk som låter dig skapa ett nytt lösenord.</h5>
-                </div>
-                <div class="row">
-                  <div class="col" style="padding-left:10%;padding-right:10%">
-                    <label for="email">Epost</label><br>
-                    <input class="form-control" type="text" id="emailReset" name="email" required>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    <button style="margin-top:5px;" class="btn btn-chosen rounded-pill"> Skicka</button>
-                  </div>
-                </div>
-              </div>
-              <div id="pw_form_successfull" style="display:none;">
-                <div class="successful-payment">
-                  <h1>Förfrågan lyckades och vi har nu skickat dig en förfrågan att byta lösenord per e-post.</h1>
-                </div>
-              </div>
-              <div id="pw_form_unsuccessfull" style="display:none;">
-                <div class="error_text">
-                  <h1>Förfrågan misslyckades. Var god uppdatera sidan och försök igen.</h1>
-                </div>
-              </div>
-            </div>
-          </form>
-          </form>
         </div>
       </div>
     </div>
