added functionality for url to preselect a campaign

--- a/ksf-campaign-pages-prod.html
+++ b/ksf-campaign-pages-prod.html
@@ -61,7 +61,7 @@
                       <p class="price-actual" id="3305-price">19,95 €</p>
                       <p id="3305-extra_text_price" class="per_month">/första månadaden</p>
                       <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
-                      <p class="campaign_info" id="3305-campaign_info">March 31, 2021 23:59:59</p>
+                      <p class="campaign_info" id="3305-campaign_info">April 9, 2021 23:59:59</p>
                     </div>
                     <div id="more-3305-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
@@ -127,7 +127,7 @@
                       <p class="price-actual" id="3307-price">14,95 €</p>
                       <p id="3307-extra_text_price" class="per_month">/första månaden</p>
                       <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
-                      <p class="campaign_info" id="3307-campaign_info">March 31, 2021 23:59:59</p>
+                      <p class="campaign_info" id="3307-campaign_info">April 9, 2021 23:59:59</p>
                       <p class="campaign_info_sub">Observera att tidningen är addresserad<br>och delas ut med dagsposten.</p>
                     </div>
                     <div id="more-3307-details" style="display:none;" class="hidden-text">
@@ -196,7 +196,7 @@
                       <p class="price-actual" id="3304-price">14,95 €</p>
                       <p id="3304-extra_text_price" class="per_month">/första månaden</p>
                       <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
-                      <p class="campaign_info" id="3304-campaign_info">March 31, 2021 23:59:59</p>
+                      <p class="campaign_info" id="3304-campaign_info">April 9, 2021 23:59:59</p>
                     </div>
                     <div id="more-3304-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
@@ -264,7 +264,7 @@
                       <p class="price-actual" id="3306-price">49 €</p>
                       <p id="3306-extra_text_price" class="per_month">/6 månader</p>
                       <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
-                      <p class="campaign_info" id="3306-campaign_info">March 31, 2021 23:59:59</p>
+                      <p class="campaign_info" id="3306-campaign_info">April 9, 2021 23:59:59</p>
                     </div>
                     <div id="more-3306-details" style="display:none;" class="hidden-text">
                       <p class="offer_header">Prenumerationen innehåller</p>
@@ -418,11 +418,11 @@
                       <label class="form-label" for="country">Land</label><br>
                       <select class="form-select" type="text" id="country" name="country" required>
                         <option selected disabled value="">Land...</option>
-                        <option value="Finland">Finland</option>
-                        <option value="Åland">Åland</option>
-                        <option value="Sverige">Sverige</option>
-                        <option value="Norge">Norge</option>
-                        <option value="Danmark">Danmark</option>
+                        <option value="FI">Finland</option>
+                        <option value="AX">Åland</option>
+                        <option value="SE">Sverige</option>
+                        <option value="NO">Norge</option>
+                        <option value="DK">Danmark</option>
                       </select>
                     </div>
                   </div>
