cleaned up, updated README, added some comments and set it to match live campaigns

--- a/single-page.html
+++ b/single-page.html
@@ -113,10 +113,8 @@
                 </div>
 
                 <div style="display:none;">
-                  <input type="hidden" value="1" id="3305-period">
                   <input type="hidden" value="4172" id="3305-campaignNo">
                   <input type="hidden" value="HBL 365" id="3305-packageId">
-                  <input type="hidden" value="1790" id="3305-payAmountCents">
                 </div>
               </div>
             </div>
@@ -224,11 +222,11 @@
                       <label class="form-label" for="country">Land</label><br>
                       <select class="form-select" type="text" id="country" name="country" required>
                         <option selected disabled value="">Land...</option>
-                        <option value="Finland">Finland</option>
-                        <option value="Åland">Åland</option>
-                        <option value="Sverige">Sverige</option>
-                        <option value="Norge">Norge</option>
-                        <option value="Danmark">Danmark</option>
+                        <option value="FI">Finland</option>
+                        <option value="AX">Åland</option>
+                        <option value="SE">Sverige</option>
+                        <option value="NO">Norge</option>
+                        <option value="DK">Danmark</option>
                       </select>
                     </div>
                   </div>
@@ -237,8 +235,6 @@
                 <div>
                   <input type="hidden" name="campaignNo" value="" id="campaignNo">
                   <input type="hidden" name="packageId" value="" id="packageId">
-                  <input type="hidden" name="period" value="" id="period">
-                  <input type="hidden" name="payAmountCents" value="" id="payAmountCents">
                   <div class="row">
                     <div class="col-md-5">
                       <label for="campaign-code">Kampanjkod</label><br>
