Add missing html closing tags

--- a/single-page.html
+++ b/single-page.html
@@ -1,6 +1,4 @@
 <html>
-<div style="display:none;">
-
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property='og:title' content='KSF kampanjsidor' />
@@ -32,7 +30,6 @@
             'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
       })(window, document, 'script', 'dataLayer', 'GTM-KB4TVP');</script>
   </head>
-</div>
 
 <body>
   <div style="display:none;">
@@ -74,22 +71,16 @@
                     <div id="more-3305-details" class="hidden-text offer_one_pager">
                       <p class="offer_header_one_pager">Prenumerationen innehåller</p>
                       <div class="offering_items_one_pager">
-                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> E-tidningsappen HBL 365
-                        <p class="offer_sub_one_pager">E-tidningarna HBL, Västra Nyland, Östnyland och digitala korsord
-                        </p>
-                        </p>
-                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> E-tidningar på dator
+                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> E-tidningsappen HBL 365</p>
+                        <p class="offer_sub_one_pager">E-tidningarna HBL, Västra Nyland, Östnyland och digitala korsord</p>
+                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> E-tidningar på dator</p>
                         <p class="offer_sub_one_pager">HBL, Västra Nyland, Östnyland</p>
-                        </p>
-                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> Nyhetsappar
+                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> Nyhetsappar</p>
                         <p class="offer_sub_one_pager">HBL Nyheter, VN Nyheter, ÖN Nyheter</p>
-                        </p>
-                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> Premium
+                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> Premium</p>
                         <p class="offer_sub_one_pager">Alla artiklar på hbl.fi, vastranyland.fi, ostnyland.fi</p>
-                        </p>
-                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_item_one_pager"><i class="fas fa-check"></i> Digitalt månadsbrev</p>
                         <p class="offer_sub_one_pager">Nyheter & förmåner</p>
-                        </p>
                       </div>
                     </div>
                   </div>
@@ -105,13 +96,10 @@
                     <p class="campaign_info_header">Prenumerationen är tidsbunden. Erbjudandet är i kraft t.o.m.
                       31.8.2021.</p>
                     <div class="sngl-page-btn">
-                      <button class="btn select-button rounded-pill btn-light" onClick="selectCampaign(this.id)"
-                        id="3305">TESTA NU</button>
+                      <button class="btn select-button rounded-pill btn-light" onClick="selectCampaign(this.id)" id="3305">TESTA NU</button>
                     </div>
                   </div>
-
                 </div>
-
                 <div style="display:none;">
                   <input type="hidden" value="4172" id="3305-campaignNo">
                   <input type="hidden" value="HBL 365" id="3305-packageId">
@@ -121,7 +109,6 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
   <div class="footer_bg">
@@ -269,6 +256,7 @@
                     <button class="btn btn-order rounded-pill" id="submit-button" disabled> Bekräfta och beställ
                     </button>
                   </div>
+                </div>
               </form>
               <div class="col">
                 <a style="display:none;" id="forgot_password_a" href="https://www.hbl.fi/losenord/" target="_blank"
