--- a/ksf-campaign-pages-prod.html
+++ b/ksf-campaign-pages-prod.html
@@ -75,37 +75,30 @@
                                             <p class="price-actual" id="3305-price">99 €</p>
                                             <p id="3305-extra_text_price" class="per_month">/3 mån.</p>
                                             <p class="campaign_info_header">Prenumerationen är fortlöpande</p>
-                                            <p class="campaign_info" id="3305-campaign_info">August 31, 2021 23:59:59
-                                            </p>
+                                            <p class="campaign_info" id="3305-campaign_info">August 31, 2021 23:59:59</p>
                                         </div>
                                         <div id="more-3305-details" style="display:none;" class="hidden-text">
                                             <p class="offer_header">Prenumerationen innehåller</p>
                                             <div class="offering_items">
-                                                <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
+                                                <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen</p>
                                                 <p class="offer_sub">Tryckta tidningen HBL måndag-söndag</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningar
+                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningar</p>
                                                 <p class="offer_sub">HBL, Västra Nyland, Östnyland och digitala korsord
                                                     på datorn</p>
-                                                </p>
                                                 <p class="offer_item"><i class="fas fa-check"></i> E-tidningsappen HBL
-                                                    365
+                                                    365</p>
                                                 <p class="offer_sub">E-tidningarna HBL, Västra Nyland, Östnyland och
                                                     digitala korsord på mobilen
                                                     eller surfplattan</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar
+                                                <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar</p>
                                                 <p class="offer_sub">Nyheter på mobilen och surfplattan, pushnotiser med
                                                     HBL nyheter, VN nyheter
                                                     och ÖN nyheter</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Premium
+                                                <p class="offer_item"><i class="fas fa-check"></i> Premium</p>
                                                 <p class="offer_sub">Alla artiklar på hbl.fi, vastranyland.fi och
                                                     ostnyland.fi</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                                                <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev</p>
                                                 <p class="offer_sub">Nyheter & förmåner</p>
-                                                </p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -157,10 +150,8 @@
                                                 <p class="offer_item"><i class="fas fa-check"></i> Affärsmagasinet Forum
                                                 <p class="offer_sub">Forum bevakar teman som inkluderar ekonomi, börs,
                                                     teknik, ledarskap och arbetsliv.</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> forummag.fi
+                                                <p class="offer_item"><i class="fas fa-check"></i> forummag.fi</p>
                                                 <p class="offer_sub">Alla artiklar på forummag.fi</p>
-                                                </p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -208,19 +199,14 @@
                       <div class="offering_items">
                         <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
                         <p class="offer_sub">Tryckta tidningen tisdag och fredag</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> VN i HBL 365
+                        <p class="offer_item"><i class="fas fa-check"></i> VN i HBL 365</p>
                         <p class="offer_sub">Västra Nyland som e-tidning i mobilen och på surfplattan</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> VN Nyheter
+                        <p class="offer_item"><i class="fas fa-check"></i> VN Nyheter</p>
                         <p class="offer_sub">Alla artiklar i nyhetsappen VN Nyheter</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> Premium
+                        <p class="offer_item"><i class="fas fa-check"></i> Premium</p>
                         <p class="offer_sub">Alla artiklar på vastranyland.fi</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev</p>
                         <p class="offer_sub">Nyheter & förmåner</p>
-                        </p>
                       </div>
                     </div>
                     <div class="row">
@@ -272,29 +258,23 @@
                                             <div class="offering_items">
                                                 <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
                                                 <p class="offer_sub">Tryckta tidningen HBL fredag-söndag</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningar
+                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningar</p>
                                                 <p class="offer_sub">HBL, Västra Nyland, Östnyland och digitala korsord
                                                     på datorn</p>
-                                                </p>
                                                 <p class="offer_item"><i class="fas fa-check"></i> E-tidningsappen HBL
-                                                    365
+                                                    365</p>
                                                 <p class="offer_sub">E-tidningarna HBL, Västra Nyland, Östnyland och
                                                     digitala korsord på mobilen
                                                     eller surfplattan</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar
+                                                <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar</p>
                                                 <p class="offer_sub">Nyheter på mobilen och surfplattan, pushnotiser med
                                                     HBL nyheter, VN nyheter
                                                     och ÖN nyheter</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Premium
+                                                <p class="offer_item"><i class="fas fa-check"></i> Premium</p>
                                                 <p class="offer_sub">Alla artiklar på hbl.fi, vastranyland.fi och
                                                     ostnyland.fi</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                                                <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev</p>
                                                 <p class="offer_sub">Nyheter & förmåner</p>
-                                                </p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -342,19 +322,14 @@
                       <div class="offering_items">
                         <p class="offer_item"><i class="fas fa-check"></i> Papperstidningen
                         <p class="offer_sub">Tryckta tidningen tisdag och fredag</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> ÖN i HBL 365
+                        <p class="offer_item"><i class="fas fa-check"></i> ÖN i HBL 365</p>
                         <p class="offer_sub">Östnyland som e-tidning i mobilen och på surfplattan</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> ÖN Nyheter
+                        <p class="offer_item"><i class="fas fa-check"></i> ÖN Nyheter</p>
                         <p class="offer_sub">Alla artiklar i nyhetsappen ÖN Nyheter</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> Premium
+                        <p class="offer_item"><i class="fas fa-check"></i> Premium</p>
                         <p class="offer_sub">Alla artiklar på ostnyland.fi</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev</p>
                         <p class="offer_sub">Nyheter & förmåner</p>
-                        </p>
                       </div>
                     </div>
                     <div class="row">
@@ -401,19 +376,14 @@
                       <div class="offering_items">
                         <p class="offer_item"><i class="fas fa-check"></i> Premium
                         <p class="offer_sub">Alla artiklar på vastranyland.fi</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> VN Nyheter
+                        <p class="offer_item"><i class="fas fa-check"></i> VN Nyheter</p>
                         <p class="offer_sub">Alla artiklar i nyhetsappen VN Nyheter</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> VN i HBL 365
+                        <p class="offer_item"><i class="fas fa-check"></i> VN i HBL 365</p>
                         <p class="offer_sub">Västra Nyland som e-tidning i mobilen och på surfplattan</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningen
+                        <p class="offer_item"><i class="fas fa-check"></i> E-tidningen</p>
                         <p class="offer_sub">Läs e-tidningen på dator</p>
-                        </p>
-                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                        <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev</p>
                         <p class="offer_sub">Nyheter & förmåner</p>
-                        </p>
                       </div>
                     </div>
                     <div class="row">
@@ -467,23 +437,17 @@
                                                 <p class="offer_sub">E-tidningarna HBL, Västra Nyland, Östnyland och
                                                     digitala korsord på mobilen
                                                     eller surfplattan</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningar på dator
+                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningar på dator</p>
                                                 <p class="offer_sub">HBL, Västra Nyland, Östnyland och digitala korsord
                                                     på datorn</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar
-                                                <p class="offer_sub">HBL nyheter, VN nyheter och ÖN nyheter, pushnotiser
-                                                </p>
-                                                </p>
+                                                <p class="offer_item"><i class="fas fa-check"></i> Nyhetsappar</p>
+                                                <p class="offer_sub">HBL nyheter, VN nyheter och ÖN nyheter, pushnotiser</p>
                                                 <p class="offer_item"><i class="fas fa-check"></i> Alla artiklar inkl.
                                                     Premium
                                                 <p class="offer_sub">Alla artiklar på hbl.fi, vastranyland.fi och
                                                     ostnyland.fi</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev
+                                                <p class="offer_item"><i class="fas fa-check"></i> Digitalt månadsbrev</p>
                                                 <p class="offer_sub">Nyheter & förmåner</p>
-                                                </p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -533,21 +497,16 @@
                                             <div class="offering_items">
                                                 <p class="offer_item"><i class="fas fa-check"></i> Premium
                                                 <p class="offer_sub">Alla artiklar på ostnyland.fi</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> ÖN Nyheter
+                                                <p class="offer_item"><i class="fas fa-check"></i> ÖN Nyheter</p>
                                                 <p class="offer_sub">Alla artiklar i nyhetsappen ÖN Nyheter</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> ÖN i HBL 365
+                                                <p class="offer_item"><i class="fas fa-check"></i> ÖN i HBL 365</p>
                                                 <p class="offer_sub">Östnyland som e-tidning i mobilen och på
                                                     surfplattan</p>
-                                                </p>
-                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningen
+                                                <p class="offer_item"><i class="fas fa-check"></i> E-tidningen</p>
                                                 <p class="offer_sub">Läs e-tidningen på dator</p>
-                                                </p>
                                                 <p class="offer_item"><i class="fas fa-check"></i> Digitalt
                                                     månadsbrev
                                                 <p class="offer_sub">Nyheter & förmåner</p>
-                                                </p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -643,7 +602,6 @@
                 </div>
             </div>
         </div>
-    </div>
     </div>
     <div class="container" style="margin-top:30px;" id="info_section">
         <div class="row">
@@ -749,6 +707,7 @@
                                     <div class="col">
                                         <button class="btn btn-order rounded-pill" id="submit-button" disabled>Bekräfta och beställ</button>
                                     </div>
+                                </div>
                             </form>
                             <div class="col">
                                 <a style="display:none;" id="forgot_password_a" href="https://www.hbl.fi/losenord/" target="_blank" class="btn rounded-pill" rel="noopener">Glömt lösenord?</a>
